--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <br>
     <div id="loginbox">
-        <img src="https://pbs.twimg.com/media/EEUy6MCU0AErfve.png" id="pfp" class="rounded-circle">
+        <img src="pfp.png" id="pfp" class="rounded-circle">
         <form id="loginForm" class="form-group">
             <label>Email:</label>
             <input type="email" class="form-control bg-info" placeholder="Enter email">
