--- a/projectmain.html
+++ b/projectmain.html
@@ -84,7 +84,7 @@
     </div>
 </nav>
 <br>
-<img src="mainpfp.png" id="folderpic">
+<img src="mainpfp.jpg" id="folderpic">
 <p id="Big">My ICT Portfolio</p>
 <p id="small">Don't forget to put one adjective about the project you viewed</p>
 </body>
