--- a/projectmain.html
+++ b/projectmain.html
@@ -27,8 +27,8 @@
             font-family: roboto;
         }
         #folderpic{
-            width: 400px;
-            height: 300px;
+            width: 300px;
+            height: 400px;
         }
         #box{
             width: 130px;
@@ -84,7 +84,7 @@
     </div>
 </nav>
 <br>
-<img src="mainpfp.jpg" id="folderpic">
+<img src="profile.jpg" id="folderpic">
 <p id="Big">My ICT Portfolio</p>
 <p id="small">Don't forget to put one adjective about the project you viewed</p>
 </body>
